# studiolab

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.yaml  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  infinite_test.py  justfile  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  tsr.config.json
.github/workflows/: cd.yml  ci.yml
blocks/flojoy/control/: slider.py  toggle.py
blocks/flojoy/logic/: clock.py  (+3 more)
captain/: constants.py  main.py  pyproject.toml
captain/blocks/: bignum.py  button.py  clock.py  conditional.py  constant.py  gamepad.py  sequence.py  slider.py
captain/controllers/: flow.py  reactive.py  test_file.json
captain/decorators/: __init__.py
captain/lib/: block.py  block_import.py
captain/logging/: __init__.py
captain/routers/: blocks.py  status.py
captain/tests/: reactive.py  test_functions.py  test_reactive.py
captain/types/: builtins.py  events.py  flowchart.py  status.py
captain/utils/: blocks.py  list_utils.py  ws.py
protos/: flowchart.proto  flowchart_grpc_pb.d.ts  flowchart_grpc_pb.js  flowchart_pb.d.ts  flowchart_pb.js  flowchart_pb2.py  flowchart_pb2.pyi  flowchart_pb2_grpc.py  hello.proto  hello_grpc_pb.d.ts  hello_grpc_pb.js  hello_pb.d.ts  hello_pb.js  hello_pb2.py  hello_pb2_grpc.py
scripts/: notarize.js
src/main/: captain.ts  command.ts  conda.ts  executor.ts  index.ts  logging.ts  python.ts  setup.ts  windows.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html  library.html
src/types/: index.ts
(+115 files in other folders)
