[tool.poetry]
name = "captain"
version = "0.1.0"
description = ""
authors = ["Joey Yu <joey@jyu.dev>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic = "^2.4.2"
reactivex = "^4.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"

[tool.poetry.group.ai-ml]
optional = true

[tool.poetry.group.ai-ml.dependencies]
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
scikit-learn = "^1.3.2"

[tool.poetry.group.hardware]
optional = true

[tool.poetry.group.hardware.dependencies]
pyvisa = "^1.13.0"
pyvisa-py = "^0.7.1"
qcodes = "^0.41.1"
pyserial = "^3.5"
pyusb = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
